--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ today.<sup>17</sup> The bond they formed in those early years has endured, and t
 regularly.<sup>18</sup> Her friends and her shared everything, from their favorite games to their personal 
 dreams, and they still connect to this day.<sup>19</sup> She had a great time in her childhood, and those 
 were truly some of the most fun and meaningful years of her life.<sup>20</sup> Looking back, she's
-grateful for the relationships she built during that time.<sup></sup> </p>
+grateful for the relationships she built during that time.<sup>21</sup> </p>
   </div>
   
   
@@ -76,7 +76,7 @@ achievement Precious earned during high school and senior high school years was 
   the <strong>Best Research Award in ICT</strong>.<sup>21</sup> Winning that award not only validated her hard work 
 but also gave her a sense of accomplishment that she carried into college years with her
 newfound confidence.<sup>22</sup> <em>The pandemic and her involvement in school leadership gave Precious
-  a new perspective on what it meant to be part of something bigger than herself.</em></p>
+  a new perspective on what it meant to be part of something bigger than herself.</em><sup>23</sup></p>
   </div>
 
  
@@ -106,7 +106,7 @@ to explore, so that her future will be as bright as God intended it to be.<sup>1
 faced challenges and thought she wouldn’t make it, Precious always found a way.<sup>19</sup> She remind myself 
 that, no matter what comes next, she have the strength to handle it.<sup>20</sup> She know it’ll be okay, 
 like it always has been.<sup>21</sup> <em><strong>As she continue this life, she'll take things one step at a time, 
-     confident that, in the end, everything will fall into place.</strong> </em></p>
+     confident that, in the end, everything will fall into place.</strong> </em><sup>22</sup></p>
   </div>
   
 </body>
