--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </div>
   <div style="text-align:center">
     <h2>Childhood life</h2>
-   <img src="https://i.postimg.cc/9MFBVwhc/IMG-1316.jpg" width ="300" margin="0px" ></img>
+   <img src="Childhood.jpg" width ="300" margin="0px" ></img>
     <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong><em>Precious Leona Guevarra Lansigan</em></strong>, born on <strong>August 25, 2004</strong>, in Lying in, 
   Marulas, Valenzuela City.<sup>1</sup> She grew up in a family of five; her father, <em>Rolando R. Lansigan</em>, 
     her mother,<em> Raquel G. Lansigan</em>, her older brother, Paolo Luis G. Lansigan, and her older 
@@ -48,7 +48,7 @@ grateful for the relationships she built during that time.<sup>21</sup> </p>
   
    <div style="text-align:center">
      <h2>Teenage life</h2>
-     <img src="https://i.postimg.cc/cCq1NYpz/IMG-1317.jpg" width ="300" margin="0px" ></img><p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Her transition to high school was not that tough, at least in terms of 
+     <img src="Teenager.jpg" width ="300" margin="0px" ></img><p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Her transition to high school was not that tough, at least in terms of 
 changing schools.<sup>1</sup> She simply moved from heer old school to the one beside it, <b>Notre Dame 
   of Greater Manila</b>, along with her elementary school friends.<sup>2</sup> She actually just followed her 
 sister who was already a student there, and her friends followed her as well.<sup>3</sup> It was 
@@ -82,7 +82,7 @@ newfound confidence.<sup>22</sup> <em>The pandemic and her involvement in school
  
   <div style="text-align:center;">
    <h2>College life</h2>
-   <img align="middle" src="https://i.postimg.cc/CK40ZXfw/IMG-1686.jpg" width ="300" ></img><p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;She is currently pursuing a <em>Bachelor of Science in Information Technology</em> at the 
+   <img src="College.jpg" width ="300" ></img><p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;She is currently pursuing a <em>Bachelor of Science in Information Technology</em> at the 
      <strong>University of the East - Manila</strong>.<sup>1</sup> It has been a thrilling experience for her, to say the least.<sup>2</sup> The 
 university is located far from where she lives, and the culture there is very different from 
      what she is used to.<sup>3</sup> Initially, <em>Precious considered other universities </em>like <b>Ateneo and <a title"Delasalle University">DLSU</a></b> since she 
